fixing morsel block overflow issues

--- a/src/sass/_public/_morsel-block.scss
+++ b/src/sass/_public/_morsel-block.scss
@@ -17,9 +17,7 @@
       background-image: none;
     }
 
-    h1 {
-      color: $link-hover-color;//for overflow ellipsis
-
+    .morsel-block-title {
       a {
         color: $link-hover-color;
       }
@@ -58,32 +56,40 @@
     @include background-image(linear-gradient(rgba(23, 20, 17,0) 0%, rgba(23, 20, 17,0) 1%, rgba(23, 20, 17,0.05) 8%, rgba(23, 20, 17,0.5) 64%, rgba(23, 20, 17, 0.7) 86%, rgba(23, 20, 17, 0.8) 100%));
     text-align: center;
 
-    h1 {
+    .morsel-block-title {
       font-size: 16px;
+      margin: 0;
     }
 
-    h2 {
+    .morsel-block-creator {
       font-style: italic;
       font-size: 14px;
+      margin: 0;
+
+      span {
+        color: white;
+        vertical-align: middle;
+      }
+
+      a {
+        vertical-align: middle;
+
+        &:before {
+          content: 'By ';
+          color: white;
+        }
+      }
     }
 
-    h3 {
+    .morsel-block-place {
       font-size: 14px;
+      margin: 0;
     }
 
     &:hover {
       a {
         color: white;
       }
-    }
-  }
-
-  .overflow-ellipsis {
-    color: white;
-    margin: 0;
-
-    &:hover {
-      color: $link-hover-color;
     }
   }
 
@@ -115,16 +121,16 @@
     }
 
     .morsel-info {
-      h1 {
+      .morsel-block-title {
         font-size: 22px;
       }
 
-      h2 {
+      .morsel-block-creator {
         font-size: 18px;
         margin-bottom: 3px;
       }
 
-      h3 {
+      .morsel-block-place {
         font-size: 18px;
       }
     }
@@ -134,15 +140,15 @@
 @media (min-width: $screen-sm-min) {
   .morsel-block {
     .morsel-info {
-      h1 {
+      .morsel-block-title {
         font-size: 18px;
       }
 
-      h2 {
+      .morsel-block-creator {
         font-size: 14px;
       }
 
-      h3 {
+      .morsel-block-place {
         font-size: 14px;
       }
     }
@@ -152,16 +158,16 @@
 @media (min-width: $screen-md-min) {
   .morsel-block {
     .morsel-info {
-      h1 {
+      .morsel-block-title {
         font-size: 20px;
       }
 
-      h2 {
+      .morsel-block-creator {
         font-size: 16px;
         margin-bottom: 3px;
       }
 
-      h3 {
+      .morsel-block-place {
         font-size: 16px;
       }
     }
